[OLINGO-377] Replaced cargo with embedded tomcat